--- a/css/style.css
+++ b/css/style.css
@@ -70,17 +70,17 @@ html {
     color: #FFC300;
 }
 
-#icon-nav {
+#icono-nav {
     display: none;
 }
 
-.redes {
+.redes, .redes-footer  {
     width: 100px;
     height: 40px;
     display: flex;
 }
 
-.redes div {
+.redes div , .redes-footer div{
     width: 33%;
     height: 100%;
     display: flex;
@@ -88,13 +88,13 @@ html {
     align-items: center;
 }
 
-.redes a i {
+.redes a i , .redes-footer a i{
     color: #FFC300;
     font-size: 1.3em;
     transition: .4s;
 }
 
-.redes a i:hover {
+.redes a i:hover , .redes-footer a i:hover{
     color: #ffe17e;
     font-size: 2em;
 }
@@ -104,7 +104,7 @@ html {
     margin:auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .conteiner-bienvenida {
     height: 200px;
@@ -277,4 +277,188 @@ html {
 .experiencia h4 {
     color: #ffe17e;
     font-weight: bold;
+}
+
+#portafolio {
+    max-width: 1300px;
+    margin: auto;
+    padding: 100px 0px;
+}
+
+#portafolio .titulo-seccion {
+    font-size: 22px;
+    text-transform: uppercase;
+    color: #111135;
+    text-decoration: underline;
+    text-decoration-color: #d3d3d3;
+    text-decoration-thickness: 5px;
+    text-align: center;
+}
+
+#portafolio .fila {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+}
+
+#portafolio .fila .proyecto {
+    max-width: 450px;
+    border: 1px solid #000;
+    margin: 0 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+#portafolio .fila .proyecto img {
+    width: 100%;
+    height: 100%;
+    filter: grayscale(0.8);
+    object-fit: cover;
+    transition: .5s;
+}
+
+#portafolio .fila .proyecto:hover img {
+    filter: grayscale(0);
+}
+
+#portafolio .fila .proyecto .info {
+    position: absolute;
+    left: 0;
+    background-color: rgba(0,0,0,.8);
+    color: #FFC300;
+    width: 100%;
+    padding: 10px;
+    opacity: 0;
+    bottom: -40px;
+    transition: .5s;
+}
+
+#portafolio .fila .proyecto:hover .info {
+    opacity: 1;
+    bottom: 0;
+}
+
+#portafolio .fila .proyecto a i{
+    color: #ffffff;
+}
+
+#portafolio .fila .proyecto a i:hover{
+    color: #FFC300;
+}
+
+footer {
+    padding-top: 40px;
+    background: #3d3e42;
+    color: #ffffff;
+}
+
+footer .conteiner-footer {
+    text-align: center;
+    max-width: 1300px;
+}
+
+footer .conteiner-footer a {
+    text-decoration: none;
+    color: #ffffff;
+    transition: .5s;
+}
+
+footer .conteiner-footer a:hover {
+    color: #FFC300;
+}
+
+footer .conteiner-footer, .conteiner-footer div {
+    margin: auto;
+}
+
+@media screen and (max-width:800px) {
+    .redes {
+        display: none;
+    }
+
+    nav {
+        display: none;
+    }
+
+    nav.responsive {
+        display: block;
+        background-color: rgba(0,0,0,.8);
+        width: 100%;
+        position: absolute;
+        top: 57px;
+        left: 0;
+        padding: 10px 0;
+    }
+
+    nav.responsive ul {
+        display: block;
+        text-align: center;
+    }
+
+    nav.responsive ul li {
+        margin: 5px 0;
+    }
+
+    #logo {
+        width: 25px;
+    }
+
+    #icono-nav {
+        display:block;
+        color: #FFC300;
+    }
+
+    #inicio .contenido .presentacion {
+        flex-direction: column-reverse;
+    }
+
+    #inicio .contenido .presentacion h2 {
+        font-size: 40px;
+    }
+
+    #inicio .contenido .presentacion div {
+        max-width: 60vh;
+    }
+
+    #logo2 {
+        display: none;
+    }
+
+    #sobremi {
+        flex-direction: column;
+    }
+
+    #sobremi .contenedor-foto {
+        max-width: 200px;
+        margin: auto;
+    }
+    
+    #sobremi .contenedor-foto img {
+        padding: 8px;
+    }
+
+    #sobremi .sobremi .titulo-seccion {
+        text-align: center;
+    }
+
+    #sobremi .sobremi h2 {
+        font-size: 25px;
+        text-align: center;
+    }
+
+    #sobremi .sobremi h3 {
+        text-align: center;
+    }
+
+    #portafolio {
+        padding: 50px 0;
+    }
+
+    #portafolio .fila {
+        display: block;
+    }
+
+    #portafolio .fila .proyecto {
+        margin: 10px auto;
+    }
 }
